RESOLVED FIXED 55459
JNI code in Java bridge is not correctly guarded
https://bugs.webkit.org/show_bug.cgi?id=55459
Summary JNI code in Java bridge is not correctly guarded
Steve Block
Reported 2011-03-01 04:56:50 PST
This code is partially guarded with ENABLE(JAVA_BRIDGE), but the guarding is incomplete, so the code will not build with JAVA_BRIDGE not enabled. Note that we have to guard both headers and source files as we need to protect against <jni.h> not being present and hence all JNI types being undefined.
Attachments
Patch (7.25 KB, patch)
2011-03-01 05:03 PST, Steve Block
no flags
Steve Block
Comment 1 2011-03-01 05:03:22 PST
Pavel Feldman
Comment 2 2011-03-01 06:08:19 PST
Comment on attachment 84213 [details] Patch Make sure JAVA_BRIDGE value is consistent between upstream and downstream builds. Btw, why namespace JSC?
Steve Block
Comment 3 2011-03-01 06:12:26 PST
Comment on attachment 84213 [details] Patch > Make sure JAVA_BRIDGE value is consistent between upstream and downstream builds. This code isn't yet being built by Chromium (not yet in the gypi) but with this change it should build with JAVA_BRIDGE either enabled or disabled. Currently, Chromium does not enable JAVA_BRIDGE and I won't be flipping that yet. > Btw, why namespace JSC? I think it's there for legacy reasons - the original JSC Java bridge used that namespace.
WebKit Commit Bot
Comment 4 2011-03-01 06:31:38 PST
Comment on attachment 84213 [details] Patch Clearing flags on attachment: 84213 Committed r79998: <http://trac.webkit.org/changeset/79998>
WebKit Commit Bot
Comment 5 2011-03-01 06:31:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.