2011-03-01  Steve Block  <steveblock@google.com>

Reviewed by Pavel Feldman.

        JNI code in Java bridge is not correctly guarded
        https://bugs.webkit.org/show_bug.cgi?id=55459

        No new tests, build fix only.

        * bridge/jni/v8/JNIBridgeV8.cpp:
        * bridge/jni/v8/JNIBridgeV8.h:
        * bridge/jni/v8/JNIUtilityPrivate.cpp:
        * bridge/jni/v8/JNIUtilityPrivate.h:
        * bridge/jni/v8/JavaClassV8.cpp:
        * bridge/jni/v8/JavaClassV8.h:
        * bridge/jni/v8/JavaInstanceV8.cpp:
        * bridge/jni/v8/JavaInstanceV8.h:
        * bridge/jni/v8/JavaNPObjectV8.cpp:
        * bridge/jni/v8/JavaNPObjectV8.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@79998 bbb929c8-8fbe-4397-9dbb-9b2b20218538