third_party/WebKit/Source/WebCore/bridge/jni/v8/JNIBridgeV8.cpp
@@ -27,6 +27,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "JNIBridgeV8.h"
 
+#if ENABLE(JAVA_BRIDGE)
+
 using namespace JSC::Bindings;
 
 JavaField::JavaField(JNIEnv* env, jobject aField)
@@ -43,3 +45,5 @@ JavaField::JavaField(JNIEnv* env, jobject aField)
 
     m_field = new JObjectWrapper(aField);
 }
+
+#endif // ENABLE(JAVA_BRIDGE)
