third_party/WebKit/Source/WebCore/bridge/jni/v8/JNIBridgeV8.h
@@ -27,6 +27,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef JNIBridgeV8_h
 #define JNIBridgeV8_h
 
+#if ENABLE(JAVA_BRIDGE)
+
 #include "JNIBridge.h" // For JavaString
 #include "JavaInstanceV8.h" // For JObjectWrapper
 
@@ -53,5 +55,7 @@ private:
 } // namespace Bindings
 
 } // namespace JSC
+
+#endif // ENABLE(JAVA_BRIDGE)
 
 #endif // JNIBridgeV8_h
