third_party/WebKit/Source/WebCore/bridge/jni/v8/JNIUtilityPrivate.cpp
@@ -27,6 +27,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "JNIUtilityPrivate.h"
 
+#if ENABLE(JAVA_BRIDGE)
+
 #include "JavaInstanceV8.h"
 #include "JavaNPObjectV8.h"
 
@@ -257,6 +259,8 @@ void convertJValueToNPVariant(jvalue value, JNIType jniType, const char* javaTyp
     }
 }
 
-} // end of namespace Bindings
+} // namespace Bindings
 
-} // end of namespace JSC
+} // namespace JSC
+
+#endif // ENABLE(JAVA_BRIDGE)
