third_party/WebKit/Source/WebCore/bridge/jni/v8/JNIUtilityPrivate.h
@@ -27,6 +27,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef JNIUtilityPrivate_h
 #define JNIUtilityPrivate_h
 
+#if ENABLE(JAVA_BRIDGE)
+
 #include "JNIUtility.h"
 #include "npruntime.h"
 
@@ -40,5 +42,7 @@ void convertJValueToNPVariant(jvalue, JNIType, const char* javaClassName, NPVari
 } // namespace Bindings
 
 } // namespace JSC
+
+#endif // ENABLE(JAVA_BRIDGE)
 
 #endif // JNIUtilityPrivate_h
