third_party/WebKit/Source/WebCore/bridge/jni/v8/JavaClassV8.cpp
@@ -27,6 +27,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "JavaClassV8.h"
 
+#if ENABLE(JAVA_BRIDGE)
+
 using namespace JSC::Bindings;
 
 JavaClass::JavaClass(jobject anInstance)
@@ -102,3 +104,5 @@ JavaField* JavaClass::fieldNamed(const char* name) const
 {
     return m_fields.get(name);
 }
+
+#endif // ENABLE(JAVA_BRIDGE)
