third_party/WebKit/Source/WebCore/bridge/jni/v8/JavaClassV8.h
@@ -27,6 +27,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef JavaClassV8_h
 #define JavaClassV8_h
 
+#if ENABLE(JAVA_BRIDGE)
+
 #include "JNIBridgeV8.h"
 #include "PlatformString.h"
 #include <wtf/HashMap.h>
@@ -57,5 +59,7 @@ private:
 } // namespace Bindings
 
 } // namespace JSC
+
+#endif // ENABLE(JAVA_BRIDGE)
 
 #endif // JavaClassV8_h
