third_party/WebKit/Source/WebCore/bridge/jni/v8/JavaInstanceV8.cpp
@@ -28,6 +28,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "JavaInstanceV8.h"
 
+#if ENABLE(JAVA_BRIDGE)
+
 #include "JNIBridge.h"
 #include "JNIUtilityPrivate.h"
 #include "JavaClassV8.h"
@@ -172,3 +174,5 @@ JObjectWrapper::~JObjectWrapper()
 {
     m_env->DeleteGlobalRef(m_instance);
 }
+
+#endif // ENABLE(JAVA_BRIDGE)
