third_party/WebKit/Source/WebCore/bridge/jni/v8/JavaInstanceV8.h
@@ -28,6 +28,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef JavaInstanceV8_h
 #define JavaInstanceV8_h
 
+#if ENABLE(JAVA_BRIDGE)
+
 #include "JNIUtility.h"
 #include "npruntime.h"
 
@@ -97,5 +99,7 @@ protected:
 } // namespace Bindings
 
 } // namespace JSC
+
+#endif // ENABLE(JAVA_BRIDGE)
 
 #endif // JavaInstanceV8_h
