third_party/WebKit/Source/WebCore/bridge/jni/v8/JavaNPObjectV8.cpp
@@ -28,6 +28,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "JavaNPObjectV8.h"
 
+#if ENABLE(JAVA_BRIDGE)
+
 #include "JNIUtilityPrivate.h"
 #include "JavaClassV8.h"
 #include "JavaInstanceV8.h"
@@ -167,3 +169,5 @@ bool JavaNPObjectGetProperty(NPObject* obj, NPIdentifier identifier, NPVariant* 
 } // namespace Bindings
 
 } // namespace JSC
+
+#endif // ENABLE(JAVA_BRIDGE)
