third_party/WebKit/Source/WebCore/bridge/jni/v8/JavaNPObjectV8.h
@@ -27,6 +27,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef JavaNPObjectV8_h
 #define JavaNPObjectV8_h
 
+#if ENABLE(JAVA_BRIDGE)
+
 #include "npruntime.h"
 #include <wtf/RefPtr.h>
 
@@ -53,5 +55,7 @@ bool JavaNPObjectGetProperty(NPObject*, NPIdentifier name, NPVariant* result);
 } // namespace Bindings
 
 } // namespace JSC
+
+#endif // ENABLE(JAVA_BRIDGE)
 
 #endif // JavaNPObjectV8_h
